crates/tlang_test_runner/src/snapshots/tlang_test_runner__tests__known_failures_unicode_strings_javascript@known_failures__unicode_strings.tlang.snap
---
source: crates/tlang_test_runner/src/main.rs
description: Known failure - output may not match expected
expression: apply_redactions(&output)
input_file: tests/known_failures/unicode_strings.tlang
---
[stdin]:213
    let newline_str = "line1
                      ^^^^^^

SyntaxError: Invalid or unexpected token
    at [NODE_INTERNAL_STACK]
    at [NODE_INTERNAL_STACK]
    at [STDIN_WRAPPER]
    at [NODE_INTERNAL_STACK]
    at [NODE_INTERNAL_STACK]
    at [NODE_INTERNAL_STACK]
    at [NODE_INTERNAL_STACK]
    at [NODE_CORE_STACK]
    at [NODE_INTERNAL_STACK]
    at [NODE_INTERNAL_STACK]

Node.js [VERSION]
